# kubecon-eu-2026-agentic-routing

./: .gitignore  README.md  candle-binding  demo.yaml  examples-llmbackends.yaml  final-lab.md  install.sh  lab-intelligent-router.md  lab-llmbackends.yaml  lab-optimization-target.md  lab.md  llmbackends.yaml  notas.txt  notes-for-egentgateway-extProc-server.txt  setup.sh  uninstall.sh
artifacts/mcps/costs/: .dockerignore  .gitignore  Dockerfile  README.md  local_model.yaml  mcp-server-config.json  pyproject.toml
artifacts/mcps/costs/docs/: api_openrouter_sample.json  api_red_electrica_española.md  cost_models.md  local_price_adaptation.md  main.md
artifacts/mcps/costs/mcp/: openrouter-pricing-mcp.yaml  spain-electricity-cost-mcp.yaml
artifacts/mcps/costs/openrouter-pricing-mcp/: .env.example  Dockerfile  README.md  kmcp.yaml  pyproject.toml
artifacts/mcps/costs/openrouter-pricing-mcp/src/: main.py
artifacts/mcps/costs/openrouter-pricing-mcp/src/core/: __init__.py  utils.py
artifacts/mcps/costs/openrouter-pricing-mcp/src/tools/: __init__.py  pricing.py
artifacts/mcps/costs/openrouter-pricing-mcp/tests/: test_server.py  test_tools.py
artifacts/mcps/costs/spain-electricity-cost-mcp/: .env.production  Dockerfile  README.md  kmcp.yaml  pyproject.toml
artifacts/mcps/costs/spain-electricity-cost-mcp/src/: main.py
artifacts/mcps/costs/spain-electricity-cost-mcp/src/core/: __init__.py  server.py  utils.py
artifacts/mcps/costs/spain-electricity-cost-mcp/tests/: test_server.py  test_tools.py
artifacts/mcps/costs/tests/: test_server.py
(+242 files in other folders)
